# pressio-tools

./: .gitignore  CMakeLists.txt  COPYRIGHT.txt  LibPressioToolsConfig.cmake.in  libpressio_meta.pc.in  libpressio_meta_cxx.pc.in
include/: libpressio_meta.h
include/utils/: fuzzy_matcher.h  string_options.h
src/find_interesting_points/: CMakeLists.txt  find_interesting_points.cc
src/pressio/: CMakeLists.txt  cmdline.cc  cmdline.h  file_action.cc  file_action.h  graph.cc  graph.h  options.cc  options.h  pressio.cc
src/pressio_batch/: CMakeLists.txt  cmdline.cc  cmdline.h  compressor_configs.cc  compressor_configs.h  compressors.json  datasets.cc  datasets.h  datasets.json  hello_metrics.sh  io.cc  io.h  metrics.cc  metrics.h  metrics.json  mpi_common.cc  mpi_common.h  mpi_master.cc  mpi_master.h  mpi_worker.cc  mpi_worker.h  pressio_batch.cc  pressio_batch_mpi.cc
src/pressio_meta/: pressio_meta.cc
src/pressio_new/: pressio_new.cc  templates.cc  templates.h
src/utils/: pressio_tools_version.h.in  string_options.cc
test/: CMakeLists.txt  pressio_opt.sh  test_trie.cc
